/* Swedish */ (un)countable <is#1811>

--- a/wiki/is.wikitext
+++ b/wiki/is.wikitext
@@ -134,9 +134,10 @@ Irregular: similar to first and second declensions, except for singular genitive
 
 ==Swedish==
 ===Noun===
-'''is'''
+'''is''' (''uncountable and countable'')
 
-#[[ice]]
+#(''uncountable'') [[ice]]; frozen [[water]]
+#(''countable'') [[ice]]; a sheet of ice lying on a body of water
 
 [[la:Is]]
 [[hu:is]]
