ok, rmv dbl parentheses <är#53931>

--- a/wiki/%C3%A4r.wikitext
+++ b/wiki/%C3%A4r.wikitext
@@ -2,5 +2,5 @@
 ===Verb===
 '''är'''
 
-# (''Present tense (all persons) of [[vara]]'') [[am]], [[are]], [[is]]
+# (''Present tense in all persons of [[vara]]'') [[am]], [[are]], [[is]]
 [[sv:är]]
