--- a/wiki/being.wikitext
+++ b/wiki/being.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Verb===
 '''being'''
 
@@ -8,6 +9,7 @@
 *Italian: [[essendo]], [[stando]]
 *[[Romanica]]: [[essente]], [[stante]], [[essendo]], [[stando]]
 *Spanish: [[siendo]], [[estando]]
+*Swedish: [[varande]], ([[varandes]])
 
 ===Noun===
 '''being''' ([[beings]])
@@ -23,3 +25,4 @@
 *Italian: [[essere]] ''m''
 *[[Romanica]]: [[esser]] ''m''
 *Spanish: [[ser]] ''m''
+*Swedish: [[varelse]] ''c''
