some sv-fmt <vara#51810>

--- a/wiki/vara.wikitext
+++ b/wiki/vara.wikitext
@@ -5,9 +5,11 @@
 # ''feminine form of [[varo]]''
 
 ----
-==Swedish==
-===Verb===
+== Swedish ==
+=== Verb ===
 '''vara''' 
+#to [[be]]
+==== Conjugations ====
 {| border=1 cellspacing=0
 |- align=center
 ! width=145 bgcolor="#FFFFF0" | Infinitive
@@ -32,9 +34,9 @@
 | colspan=2 | [[vore]]
 |}
 
-#to [[be]]
-
-===Verb===
+=== Verb ===
+#To [[ooze]] [[pus]]
+==== Conjugations ====
 {| border=1 cellspacing=0
 |- align=center
 ! width=145 bgcolor="#FFFFF0" | Infinitive
@@ -59,9 +61,10 @@
 | colspan=2 | [[varad]]
 |}
 
-#To [[ooze]] [[pus]]
 
 === Verb ===
+#To [[last]]
+==== Conjugations ====
 (No passive form)
 {| border=1 cellspacing=0
 |- align=center
@@ -87,14 +90,14 @@
 | colspan=2 | -
 |}
 
-#To [[last]]
 
-====Synonymes====
+==== Synonymes ====
 *[[fortfara]]
 
-===Noun===
+=== Noun ===
 '''vara''' 
-
+# Something which is [[bought]] and [[sold]]; a [[ware]]
+====Conjugations====
 {| border=1 cellspacing=0
 | bgcolor="#FFFFF0" colspan=5 align=center | '''Common'''
 |-
@@ -120,5 +123,3 @@
 | [[varors]]
 | [[varornas]]
 |}
-
-# Something which is [[bought]] and [[sold]].
