sv; dewikied headers <product#184>

--- a/wiki/product.wikitext
+++ b/wiki/product.wikitext
@@ -1,46 +1,47 @@
-== [[English]] ==
+== English ==
 
-=== [[Noun]] ===
+=== Noun ===
 
-''product''
-# commodities offered for sale; "good business depends on having good merchandise"; "that store offers a variety of products" [''syn:'' [[merchandise]], [[wares]]]
-# the amount of an artifact that has been created by someone or some process; "they improve their product every year"; "they export most of their agricultural production" [''syn:'' [[production]]]
+'''product'''
+# commodities offered for sale; "good business depends on having good merchandise"; "that store offers a variety of products" [''syn:'' [[merchandise]], [[wares]] ]
+# the amount of an artifact that has been created by someone or some process; "they improve their product every year"; "they export most of their agricultural production" [''syn:'' [[production]] ]
 # a consequence of someone's efforts or of a particular set of circumstances; "skill is the product of hours of practice"; "his reaction was the product of hunger and fatigue"
 # a chemical substance formed as a result of a chemical reaction; "a product of lime and nitric acid"
-# a quantity obtained by multiplication; "the product of 2 and 3 is 6" [''syn:'' [[mathematical product]]]
-# the set of elements common to two or more sets; "the set of red hats is the intersection of the set of hats and the set of red things" [''syn:'' [[intersection]]]
+# a quantity obtained by multiplication; "the product of 2 and 3 is 6" [''syn:'' [[mathematical product]] ]
+# the set of elements common to two or more sets; "the set of red hats is the intersection of the set of hats and the set of red things" [''syn:'' [[intersection]] ]
 
-=== [[Translation]]s ===
+==== Translations ====
 
 *[[Basque]]: [[produktu]], [[ekoizpen]]
-*[[Bulgarian]]: [[стока]] ''f'' (1), [[производство]] ''n'' (2), [[резултат]] ''m'' (3), [[следствие]] ''n'' (4), [[продукт]] ''m'' (4), [[произведение]] ''n'' (5)
-*[[Chinese]]:
-*[[Danish]]:
-*[[Dutch]]:
+*Bulgarian: [[стока]] ''f'' (1), [[производство]] ''n'' (2), [[резултат]] ''m'' (3), [[следствие]] ''n'' (4), [[продукт]] ''m'' (4), [[произведение]] ''n'' (5)
+*Chinese:
+*Danish:
+*Dutch:
 *[[Esperanto]]:
-*[[Finnish]]: [[tuote]]
+*Finnish: [[tuote]]
 *[[Frisian]]:
-*[[French]]: [[produit]] ''m''
-*[[German]]: [[Produkt]] ''n''
-*[[Greek]]: [[προϊον]]
+*French: [[produit]] ''m''
+*German: [[Produkt]] ''n''
+*Greek: [[προϊον]]
 *[[Gothic]]:
 *[[Guaraní]]:
 *[[Hebrew]]:
 *[[Ido]]:
-*[[Indonesian]]: 
+*Indonesian: 
 *[[Interlingua]]: [[producto]]
-*[[Italian]]: [[prodotto]] ''m''
-*[[Japanese]]:
-*[[Javanese]]:
-*[[Korean]]:
-*[[Old English]]:
-*[[Polish]]: [[produkt]] ''m'' (1,4), [[produkcja]] ''f'' (2), [[wynik]] ''m'' (3), [[efekt]] ''m'' (3), [[iloczyn]] ''m'' (5,6), [[część wspólna]] ''f'' (6)
-*[[Portuguese]]: [[produto]] ''m'' (1,2,3,4,5,6), [[produção]] ''f'' (2)
-*[[Romanian]]: [[produs]] ''n'' (1,2,3,4,5,6), [[producţie]] ''f'' (2)
+*Italian: [[prodotto]] ''m''
+*Japanese:
+*Javanese:
+*Korean:
+*Old English:
+*Polish: [[produkt]] ''m'' (1,4), [[produkcja]] ''f'' (2), [[wynik]] ''m'' (3), [[efekt]] ''m'' (3), [[iloczyn]] ''m'' (5,6), [[część wspólna]] ''f'' (6)
+*Portuguese: [[produto]] ''m'' (1,2,3,4,5,6), [[produção]] ''f'' (2)
+*Romanian: [[produs]] ''n'' (1,2,3,4,5,6), [[producţie]] ''f'' (2)
 *[[Romanica]]: [[producto]] ''m''
-*[[Spanish]]: [[producto]] ''m''
+*Spanish: [[producto]] ''m''
+*Swedish: [[produkt]] ''c'' (1,4,5), [[vara]] ''c'' (1)
 *[[Tupinambá]]:
-*[[Turkish]]:
+*Turkish:
 
 [[nl:product]]
 [[ru:Product]]
