/* Etymology */  Greek - please check <di-#44319>

--- a/wiki/di-.wikitext
+++ b/wiki/di-.wikitext
@@ -1,7 +1,6 @@
 ==English==
 ===Etymology===
-{{etystub}}
-From {{Gr.}} [[]] twice
+From {{Gr.}} [[δι]] (di) twice
 
 ===Prefix===
 [[Category:English prefixes]]
