--- a/wiki/tri-.wikitext
+++ b/wiki/tri-.wikitext
@@ -11,6 +11,8 @@ From {{L.}} ''[[tres]]'', three, and {{Gr.}} ''[[]]'', three
 ====Translations====
 *French: tri-
 *Italian: tri-
+===Synonyms===
+*[[ter-]]
 
 ====Related terms====
 *[[triad]]
