robot  Adding:pl <picnic#92884>

--- a/wiki/PICNIC.wikitext
+++ b/wiki/PICNIC.wikitext
@@ -7,3 +7,5 @@ From french ''[[piquenique]]''
 '''''picnic'''''
 #a meal eaten outdoors or in another informal setting
 #an easy or pleasant task
+
+[[pl:Picnic]]
