/* Etymology */  Greek - please check <tetra-#43238>

--- a/wiki/tetra-.wikitext
+++ b/wiki/tetra-.wikitext
@@ -6,8 +6,7 @@
 #[[four]]
 
 ====Etymology====
-{{etystub}}
-From {{Gr.}} [[]] four
+From {{Gr.}} [[τετρα]] (tetra) from [[τετταρες]] (tettares) four
 
 ===Synonyms===
 *[[quadri-]]
