/* Etymology */  Greek - please check <penta-#43586>

--- a/wiki/penta-.wikitext
+++ b/wiki/penta-.wikitext
@@ -1,7 +1,6 @@
 ==English==
 ===Etymology===
-{{etystub}}
-From {{Gr.}} [[]] five
+From {{Gr.}} [[πεντε]] (pente) five
 
 ===Prefix===
 [[Category:English prefixes]]
