robot  Adding:fr <biome#57061>

--- a/wiki/biome.wikitext
+++ b/wiki/biome.wikitext
@@ -5,3 +5,5 @@ A biome is a whole system of interactions between and among plant and animal spe
 see http://en.wikipedia.org/wiki/Biome
 
 * Campbell, Neil A.  1995.  Chapter 46 : L'écologie : Distribution et adaptation des organismes.  IN  Biologie.  Éditions du Renouveau Pédagogique Inc. Quebec. Canada.
+
+[[fr:biome]]
