/* Etymology */  Greek - please check <hexa-#43227>

--- a/wiki/hexa-.wikitext
+++ b/wiki/hexa-.wikitext
@@ -1,7 +1,6 @@
 ==English==
 ===Etymology===
-{{etystub}}
-From {{Gr.}} [[]] six
+From {{Gr.}} [[εξ]] (hex) six
 
 ===Prefix===
 [[Category:English prefixes]]
