/* Etymology */  Greek - please check <hepta-#43588>

--- a/wiki/hepta-.wikitext
+++ b/wiki/hepta-.wikitext
@@ -6,8 +6,7 @@
 #[[seven]]
 
 ====Etymology====
-{{etystub}}
-From {{Gr.}} [[]] seven
+From {{Gr.}} [[επτα]] (hepta) seven
 
 ====Synonyms====
 *[[septua-]]
