fmt; commented out enc info <Zimblish#67748>

--- a/wiki/Zimblish.wikitext
+++ b/wiki/Zimblish.wikitext
@@ -1,1 +1,13 @@
-Similar to [[Spanglish]] and all the other ones.  It is a mix between Zimbabwean languages (Shona, Zulu, Ndebele, Xhosa....) and English.  It is similar to Funnygalo and Kitchen Kaffa (although kaffa is an insulting term for an African-American)
+==English==
+===Etymology===
+[[Blend]] of [[Zimbabwean]] and [[English]]
+
+===Proper noun===
+'''Zimblish'''
+
+#A language combining English with Zimbabwean languages, such as [[Shona]], [[Zulu]], [[Ndebele]] and [[Xhosa]].
+<!--  It is similar to Funnygalo and Kitchen Kaffa (although kaffa is an insulting term for an African-American)
+-->
+
+===See also===
+*[[Spanglish]]
