--- a/wiki/Zimblish.wikitext
+++ b/wiki/Zimblish.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-[[Blend]] of [[Zimbabwean]] and [[English]]
+[[Blend]] of '''[[Zimbabwean]]''' and '''[[English]]'''
 
 ===Proper noun===
 '''Zimblish'''
