/* Etymology */  Greek - please check <octa-#43589>

--- a/wiki/octa-.wikitext
+++ b/wiki/octa-.wikitext
@@ -6,8 +6,7 @@
 #[[eight]]
 
 ====Etymology====
-{{etystub}}
-From {{Gr.}} [[]] eight
+From {{Gr.}} [[οκτο]] (octo) eight
 
 ====Related terms====
 *[[octagon]]
