robot  Adding:fi <bite#5436>

--- a/wiki/bite.wikitext
+++ b/wiki/bite.wikitext
@@ -81,6 +81,8 @@
 ==French==
 Also [[bitte]]
 ===Noun===
-# {{frslang}} [[Nob]], penis[[fr:bite]]
+# {{frslang}} [[Nob]], penis[[Category:1000 English basic words]]
+
+[[fr:bite]]
 [[it:bite]]
-[[Category:1000 English basic words]]
+[[fi:Bite]]
