robot  Adding:hu <bitch#35039>

--- a/wiki/bitch.wikitext
+++ b/wiki/bitch.wikitext
@@ -134,3 +134,5 @@ In predomanantly gay communities the noun '''bitch''' is sometimes diffused by i
 *[http://www.roxanne.org/~maeve/bitch.html The Etymology of the Word Bitch]
 
 [[Category:English vulgarities]]
+
+[[hu:bitch]]
