/* Etymology */  Greek - please check <deca-#36448>

--- a/wiki/deca-.wikitext
+++ b/wiki/deca-.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Etymology===
-{{etystub}}
-From {{Gr.}} [[]], ten.
+
+From {{Gr.}} [[δεκα]] (deca) ten.
 
 ===Prefix===
 [[Category:English prefixes]]
