/* Etymology */  Greek - please check <dodeca-#44323>

--- a/wiki/dodeca-.wikitext
+++ b/wiki/dodeca-.wikitext
@@ -1,7 +1,6 @@
 ==English==
 ===Etymology===
-{{etystub}}
-From {{Gr.}} [[]] ''twelve''
+From {{Gr.}} [[δοδεκα]] (dodeca) twelve
 
 ===Prefix===
 [[Category:English prefixes]]
