robot  Adding:ru <black magic#44114>

--- a/wiki/black_magic.wikitext
+++ b/wiki/black_magic.wikitext
@@ -12,3 +12,5 @@ When refering to advanced technology, calling something (plain) ''magic'' means 
 *Slovak: [[čierna mágia]] ''f'' (1)
 
 [[Category:Idioms]]
+
+[[ru:Black magic]]
