robot  Adding:et <piste#42059>

--- a/wiki/piste.wikitext
+++ b/wiki/piste.wikitext
@@ -28,4 +28,5 @@ borrowed from French ''piste''.
 # a [[ring]] in a [[circus]].
 # the floor used for various activities such as [[dancing]], [[skating]], or [[fencing]].
 
+[[et:Piste]]
 [[fi:Piste]]
