robot  Adding:fr,de <Blatt#87873>

--- a/wiki/Blatt.wikitext
+++ b/wiki/Blatt.wikitext
@@ -7,3 +7,6 @@
 * [[Blattauge]], [[blatten]], [[Blattgold]] , [[Blattlauskäfer]], [[Blattzeichen]]
 
 [[Category:German nouns]]
+
+[[de:Blatt]]
+[[fr:Blatt]]
