robot  Adding:la,hu <place#50353>

--- a/wiki/place.wikitext
+++ b/wiki/place.wikitext
@@ -64,7 +64,10 @@ From Old English meaning ''"open space"'', from French '''[[place]]''', from Lat
 
 [[Category:Greek derivations]]
 
+[[Category:200 English basic words]]
+
 [[et:Place]]
+[[la:Place]]
+[[hu:place]]
 [[pl:Place]]
 [[fi:Place]]
-[[Category:200 English basic words]]
