robot  Adding:fi <blizzard#35183>

--- a/wiki/blizzard.wikitext
+++ b/wiki/blizzard.wikitext
@@ -20,3 +20,5 @@ The ''blizard'' surname possibly comes from the ''bizard'' one, dating back to t
 *{{msg:fi}}: [[lumituisku]] (1), [[tuisku]] (1)
 *Indonesia: [[petir]], [[geledek]], [[halilintar]]
 *Polish: [[zamie&#263;]] ''f''
+
+[[fi:Blizzard]]
