--- a/wiki/diallelic.wikitext
+++ b/wiki/diallelic.wikitext
@@ -1,5 +1,9 @@
 == Etymology ==
-Greek.
+"di" (2) from Greek +<br />
+"[[allele]]": English word iself from Greek "allos" (other).<br />
+This word is to be prefered to "biallelic" (latin prefix + greek word).
 
-Adj.
-With 2 [[allele|alleles]].
+== Adj. ==
+
+With 2 [[allele|alleles]].<br />
+Example: ''diallelic locus''.
