--- a/wiki/appoggiatura.wikitext
+++ b/wiki/appoggiatura.wikitext
@@ -8,3 +8,5 @@ Borrowed from Italian ''appoggiatura'', derived from ''appoggiare'', meaning "to
 
 ===Meaning===
 #A melodically important musical ornament, sounded on the beat, preceding a main note (which it is one scale-step higher or lower than) and normally subtracting for itself half of the time value of that main note; written as a note of smaller size like the [[acciaccatura]], but without the oblique stroke.
+#:'''quotations''':
+#:*"The following Adagietto was like a long, melting appoggiatura composed of smaller dying falls and languid resolutions." &mdash; ''New York Times'', March 2, 1992
