--- a/wiki/diallelic.wikitext
+++ b/wiki/diallelic.wikitext
@@ -1,9 +1,7 @@
-== Etymology ==
-"di" (2) from Greek +<br />
-"[[allele]]": English word iself from Greek "allos" (other).<br />
-This word is to be prefered to "biallelic" (latin prefix + greek word).
-
-== Adj. ==
-
-With 2 [[allele|alleles]].<br />
-Example: ''diallelic locus''.
+==English==
+===Etymology===
+From {{Gr.}} [[di-]], two + {{G.}} [[allos]], other
+===Adjective===
+'''diallelic'''
+# having two [[allele]]s
+[[category:English adjectives]]
