robot  Adding:fr <plastic#35224>

--- a/wiki/plastic.wikitext
+++ b/wiki/plastic.wikitext
@@ -13,5 +13,7 @@ The common sense of ''plastic'' as a material was derived by shortening the term
 # of or pertaining to the inelastic deformation of a material.
 # constructed of ''plastic''.
 
-[[pl:Plastic]]
 [[Category:Greek derivations]]
+
+[[fr:plastic]]
+[[pl:Plastic]]
