robot  Adding:hu <planet#1570>

--- a/wiki/planet.wikitext
+++ b/wiki/planet.wikitext
@@ -144,5 +144,6 @@ Meanwhile, the Working Group on Extrasolar Planets distinguishes planets from th
 
 [[de:Planet]]
 [[fr:Planet]]
+[[hu:planet]]
 [[ja:planet]]
 [[pl:Planet]]
