robot  Adding:pl <platitude#98639>

--- a/wiki/platitude.wikitext
+++ b/wiki/platitude.wikitext
@@ -6,3 +6,5 @@ French, from Old French ''[[plat]]'' "flat"
 '''platitude'''
 # an [[unorignal]] or [[hackneyed]] phrase; a [[cliché]]
 # [[unoriginality]]; [[triteness]]
+
+[[pl:Platitude]]
