--- a/wiki/byline.wikitext
+++ b/wiki/byline.wikitext
@@ -1,7 +1,5 @@
 ==English==
-
 ===Noun===
-
 '''byline'''
-
+{{wikipedia}}
 #A line at the head of a newspaper or magazine article carrying the writer's name.
