robot  Adding:zh <bok choy#94094>

--- a/wiki/bok_choy.wikitext
+++ b/wiki/bok_choy.wikitext
@@ -7,3 +7,5 @@ Chinese: 白菜 ("white vegetable"); pinyin: báicài; Cantonese bok choy
 '''bok choy''', '''pak choy'''
 {{wikipedia}}
 #(uncountable) [[Chinese]] [[cabbage]], Brassica rapa, is an [[East]] [[Asian]] leaf [[vegetable]] related to the Western cabbage.
+
+[[zh:Bok choy]]
