robot  Adding:et <bon mot#54578>

--- a/wiki/bon_mot.wikitext
+++ b/wiki/bon_mot.wikitext
@@ -15,3 +15,5 @@ Used to refer to a clever saying, phrase or witticism. Often used to describe a 
 *[[remark]]
 *[[repartee]]
 ====Translations====
+
+[[et:Bon mot]]
