robot  Adding:hu <bone#668>

--- a/wiki/bone.wikitext
+++ b/wiki/bone.wikitext
@@ -230,6 +230,8 @@ The translations below need to be checked by native speakers and inserted into t
 ===Adverb===
 # well. From [[bona]], [[good]].
 
+[[Category:1000 English basic words]]
+
 [[fr:bone]]
 [[it:bone]]
-[[Category:1000 English basic words]]
+[[hu:bone]]
