robot  Adding:fr <point#1794>

--- a/wiki/point.wikitext
+++ b/wiki/point.wikitext
@@ -228,7 +228,9 @@ translations with definitions is unreliable.
 ====Synonyms====
 '''ne ... [[pas]]'''
 
+[[Category:1000 English basic words]]
+
 [[et:Point]]
+[[fr:point]]
 [[ru:Point]]
 [[sv:point]]
-[[Category:1000 English basic words]]
