robot  Adding:hu <both#4642>

--- a/wiki/both.wikitext
+++ b/wiki/both.wikitext
@@ -37,6 +37,8 @@
 *[[twice]]
 *[[two]]
 
-[[it:both]]
 [[Category:Old Norse derivations]]
 [[Category:200 English basic words]]
+
+[[it:both]]
+[[hu:both]]
