robot  Adding:fr <bottleneck#95675>

--- a/wiki/bottleneck.wikitext
+++ b/wiki/bottleneck.wikitext
@@ -8,3 +8,5 @@ From [[bottle]]+[[neck]]
 #in [[traffic]], any [[narrow]]ing of the [[road]], especially resulting in a [[delay]]
 #any [[delay]]; part of a [[process]] that is too [[slow]] or [[cumbersome]]
 #:''It is easy to create entries; processing the paperwork is the '''bottleneck'''.''
+
+[[fr:bottleneck]]
