--- a/wiki/escalation.wikitext
+++ b/wiki/escalation.wikitext
@@ -3,5 +3,5 @@
 {{wikipedia}}
 '''escalation'''
 # an [[increase]] or [[rise]], especially one to [[counteract]] a [[perceive]]d [[discrepancy]]
-# a [[deliberate]] or [[unpremeditated]] increase in the [[violence]] or [[geographic]] [[scope]] of a [[conflict]]
+# a [[deliberate]] or [[premeditated]] increase in the [[violence]] or [[geographic]] [[scope]] of a [[conflict]]
 [[category:English nouns]]
