--- a/wiki/xanthosis.wikitext
+++ b/wiki/xanthosis.wikitext
@@ -1,4 +1,5 @@
-xan·tho·sis (zn-thss)
-n.
-
-    A yellowish discoloration of degenerating tissues, especially seen in malignant neoplasms.
+==English==
+===Noun===
+'''xanthosis'''
+#{{medicine}} A [[yellow]]ish [[discolouration]] of [[tissue]]s undergoing [[degeneration]]
+[[category:English nouns]]
