robot  Adding:sv <pondus#55251>

--- a/wiki/pondus.wikitext
+++ b/wiki/pondus.wikitext
@@ -4,3 +4,5 @@
 # An old English measure of weight, usually of wool, perhaps equal to 3 cloves.
 #:'''Quotations'''
 #:*'''1882''': The pondus of wool at Alton Barnes and Stert is three cloves or 21 pounds. &mdash; James Edwin Thorold Rogers, ''A History of Agriculture and Prices in England'', Volume 4, p. 208.
+
+[[sv:pondus]]
