robot  Adding:hu <brain#7891>

--- a/wiki/brain.wikitext
+++ b/wiki/brain.wikitext
@@ -59,7 +59,9 @@ Middle English, derived from Old English ''[[braegen]]'' and ''[[bregen]]''.
 
 [[Category:Cerebral]]
 
+[[Category:1000 English basic words]]
+
 [[fr:brain]]
 [[it:brain]]
+[[hu:brain]]
 [[pt:Brain]]
-[[Category:1000 English basic words]]
