robot  Adding:et <Brasil#2675>

--- a/wiki/Brasil.wikitext
+++ b/wiki/Brasil.wikitext
@@ -29,6 +29,7 @@
 
 # Country in South America. Official name: República Federativa do Brasil.
 
+[[et:Brasil]]
 [[hi:Brasil]]
 [[hu:Brasil]]
 [[nl:Brasil]]
