--- a/wiki/break.wikitext
+++ b/wiki/break.wikitext
@@ -214,6 +214,7 @@ Old English ''[[brecan]]''. Confer Dutch ''[[breken]]'', German ''[[brechen]]'',
 
 [[Category:Tennis]]
 
+[[es:break]]
 [[it:break]]
 [[hu:break]]
 [[pl:Break]]
