--- a/wiki/bread.wikitext
+++ b/wiki/bread.wikitext
@@ -103,8 +103,11 @@ The translations below need to be checked by native speakers and inserted into t
 ===See also===
 *[[loaf]]
 
+[[Category:1000 English basic words]]
+
 [[es:bread]]
 [[fr:bread]]
 [[it:bread]]
+[[pl:Bread]]
 [[ru:Bread]]
-[[Category:1000 English basic words]]
+[[fi:Bread]]
