--- a/wiki/poser.wikitext
+++ b/wiki/poser.wikitext
@@ -5,8 +5,6 @@
 # Someone who, or something which, poses.
 # (''derogatory'') Someone who, of acting, dressing, collecting items, making statements, in a way so as to gain social standing (rather than in honest personal preference), shows enough of these characteristics for it to be defining to his/her character or comprises the majority of his/her compliance to a certain subculture or other social categorization.
 
-[[sv:poser]]
-
 ==French==
 
 ===Transitive verb===
@@ -17,3 +15,6 @@
 
 ====See Also====
 [[demander]]
+
+[[et:Poser]]
+[[sv:poser]]
