--- a/wiki/Portuguese.wikitext
+++ b/wiki/Portuguese.wikitext
@@ -132,6 +132,7 @@
 *[http://www.websters-online-dictionary.org/definition/Portuguese-english/ Portuguese - English Dictionary]: from [http://www.websters-online-dictionary.org/ Webster's Dictionary] - the Rosetta Edition.
 *[http://www.canuckabroad.com/language/portuguese.shtml Portuguese Travel Phrases] - Translations of common English phrases into Portuguese
 
+[[fr:Portuguese]]
 [[hi:Portuguese]]
 [[hu:Portuguese]]
 [[nl:Portuguese]]
