--- a/wiki/position.wikitext
+++ b/wiki/position.wikitext
@@ -28,6 +28,8 @@
 # [[place]], [[location]], [[position]]. A description of where something is [[located]] with respect to the surroundings, e.g. the [[satellite]]s of the [[GPS]] system.
 # (''In team sports'') A place on the playing field, together with a set of duties, assigned to a player.
 
+[[Category:1000 English basic words]]
+
+[[de:Position]]
 [[fr:position]]
 [[sv:position]]
-[[Category:1000 English basic words]]
