robot  Adding:fi <poverty#62392>

--- a/wiki/poverty.wikitext
+++ b/wiki/poverty.wikitext
@@ -8,3 +8,5 @@
 #Any deficiency of elements or resources that are needed or desired, or that constitute richness; as, poverty of soil; poverty of the blood; poverty of ideas.
 
 {{webster}}
+
+[[fi:Poverty]]
