robot  Adding:nl <precursor#83206>

--- a/wiki/precursor.wikitext
+++ b/wiki/precursor.wikitext
@@ -6,5 +6,6 @@
 '''precursor'''
 # that which [[precurses]], a [[forerunner]], a [[predecessor]], an [[indicator]] of approaching events
 
+[[nl:precursor]]
 [[pl:Precursor]]
 [[ru:Precursor]]
