--- a/wiki/ordnance.wikitext
+++ b/wiki/ordnance.wikitext
@@ -4,6 +4,9 @@
 # [[military]] equipment, especially [[weapons]] and [[ammunition]].
 # [[artillery]].
 
+====Related terms====
+*[[unexploded ordnance]]
+
 ====Translations====
 *German: [[Militärmaterial]] ''n'' (1), [[Artillerie]] ''f'' (2)
 
