--- a/wiki/excommunication.wikitext
+++ b/wiki/excommunication.wikitext
@@ -1,9 +1,24 @@
+{{Wikipedia}}
 ==English==
 
 ===Noun===
-
 '''excommunication'''
 
 #The act of communicating or ejecting; esp., an ecclesiastical censure whereby the person against whom it is pronounced is, for the time, cast out of the communication of the church; exclusion from fellowship in things spiritual.
 
+====Translations====
+*[[Chinese]] (simplified): [[逐出教会]] (zhuchujiaohui)
+*Chinese (traditional): [[逐出教會]] (zhuchujiaohui)
+*[[Czech]]: [[exkomunikace]]
+*[[Dutch]]: [[excommunicatie]]
+*[[Estonian]]: [[ekskommunikatsioon]]
+*[[French]]: excommunication
+*[[German]]: [[Exkommunikation]]
+*[[Italian]]: [[scomunica]]
+*[[Japanese]]: [[破門]] (はもん hamon)
+*[[Korean]]: [[파문]]
+*[[Latin]]: [[excommunicatio]] ''nominative'' (''Neo-Latin''), excommunicationis ''genitive'', [[excommunio]] ''nominative'' (''Classical Latin''), excommunionis ''genitive''
+*[[Norwegian]]: [[ekskommunikasjon]]
+*[[Polish]]: [[ekskomunika]]
+*[[Spanish]]: [[excomunión]]
 [[pl:Excommunication]]
