robot  Adding:zh <buffalo#8209>

--- a/wiki/buffalo.wikitext
+++ b/wiki/buffalo.wikitext
@@ -81,3 +81,5 @@ From the Portuguese ''[[bufalo]]'', from the Late Latin ''[[bubalus]]'', from th
 *'''Welsh''': [[byfflo]]
 
 [[Category:Mammals]]
+
+[[zh:Buffalo]]
