robot  Adding:pl,et,zh,it <budget#98025>

--- a/wiki/budget.wikitext
+++ b/wiki/budget.wikitext
@@ -22,3 +22,8 @@
 # To [[construct]] or [[use]] a budget
 ====Translations====
 * {{sv}} : [[bugetera]] (''construct a budget'')
+
+[[et:Budget]]
+[[it:budget]]
+[[pl:Budget]]
+[[zh:Budget]]
