robot  Adding:et <premier#29445>

--- a/wiki/premier.wikitext
+++ b/wiki/premier.wikitext
@@ -38,6 +38,7 @@ From French [[première]].
 '''premier''' ''m'' (''pl'' premierzy)
 #[[Prime minister]]
 
+[[et:Premier]]
 [[fr:premier]]
 [[ja:premier]]
 [[pl:Premier]]
