robot  Adding:pl <preparation#94033>

--- a/wiki/preparation.wikitext
+++ b/wiki/preparation.wikitext
@@ -5,3 +5,5 @@
 #that which is [[prepare]]d
 #(countable) a [[substance]], especially a [[remedy]], that is prepared
 #:''The traditional remedy is a bitter '''preparation''' made from steamed herbs.''
+
+[[pl:Preparation]]
