robot  Adding:pl <preterite#92119>

--- a/wiki/preterite.wikitext
+++ b/wiki/preterite.wikitext
@@ -15,3 +15,5 @@ From {{L.}} ([[tempus]]) [[preteritum]]
 *French: [[prétérit]]
 *Italian: [[preterito]]
 *Japanese: [[過去]], [[過去時制]]
+
+[[pl:Preterite]]
