robot  Adding:pl <preservative#98848>

--- a/wiki/preservative.wikitext
+++ b/wiki/preservative.wikitext
@@ -8,3 +8,5 @@
 '''preservative'''
 # tending to [[preserve]] 
 #:''The curators took '''preservative''' actions to maintain the ancient collection.''
+
+[[pl:Preservative]]
