--- a/wiki/eschatology.wikitext
+++ b/wiki/eschatology.wikitext
@@ -1,8 +1,21 @@
+{{Wikipedia}}
 ==English==
 ===Etymology===
 εσχατον (eschaton) "end times" + [[-logy]]
 
 ===Noun===
+'''eschatology'''
+
 #The study of the [[end times]]
+
+====Translations====
+*[[Dutch]]: [[eschatologie]]
+*[[French]]: [[eschatologie]]
+*[[German]]: [[Eschatologie]]
+*[[Italian]]: [[escatologia]]
+*[[Latin]]: [[eschatologia]]
+*[[Polish]]: [[eschatologia]]
+*[[Spanish]]: [[escatología]]
+*[[Swedish]]: [[eskatologi]]
 
 [[nl:eschatology]]
