--- a/wiki/photophobia.wikitext
+++ b/wiki/photophobia.wikitext
@@ -16,5 +16,5 @@
 *[[Korean]]: [[수명]]
 *[[Latin]]: [[photophobia]]
 *[[Portuguese]]: [[fotofobia]]
-*[[Russian]]: [[светобоязнь]]
+*[[Russian]]: [[светобоязнь]] (svetoboyazn)
 *[[Spanish]]: [[fotofobia]]
