--- a/wiki/photophobia.wikitext
+++ b/wiki/photophobia.wikitext
@@ -1,9 +1,10 @@
 ==English==
 
+{{Wikipedia}}
 ===Noun===
 '''photophobia'''
 
-#Fear of light.
+#Sympton of excessive sensitivity to light and the aversion to bright light.
 
 ===Translations===
 *[[Chinese]] (simplified): [[畏光]] (wei guang)
