--- a/wiki/photophobia.wikitext
+++ b/wiki/photophobia.wikitext
@@ -10,12 +10,12 @@
 *[[Chinese]] (simplified): [[畏光]] (wei guang)
 *[[Chinese]] (traditional): [[畏光]] (wei guang)
 *[[French]]: [[photophobie]]
-*[[German]]: [[Photophobia]]
+*[[German]]: Photophobia
 *[[Greek]]: [[φωτοφοβία]] (photophobía)
 *[[Italian]]: [[fotofobia]]
 *[[Japanese]]: [[光線恐怖症]] (kousen-kyoufushou)
 *[[Korean]]: [[수명]]
-*[[Latin]]: [[photophobia]]
+*[[Latin]]: photophobia
 *[[Portuguese]]: [[fotofobia]]
 *[[Russian]]: [[светобоязнь]] (svetoboyazn)
 *[[Spanish]]: [[fotofobia]]
