robot  Adding:fr <bunt#60055>

--- a/wiki/bunt.wikitext
+++ b/wiki/bunt.wikitext
@@ -5,3 +5,5 @@
 '''bunt'''
 
 #The middle part, cavity, or belly of a sail; the part of a furled sail which is at the center of the yard.
+
+[[fr:bunt]]
