robot  Adding:pl,fr,et,nl <principe#96817>

--- a/wiki/principe.wikitext
+++ b/wiki/principe.wikitext
@@ -13,3 +13,8 @@ prìncipe, /ˈprintʃipe/, /<tt>"printSipe</tt>/
 *[[principato]]
 *[[principesco]]
 *[[principio]]
+
+[[et:Principe]]
+[[fr:principe]]
+[[nl:principe]]
+[[pl:Principe]]
