--- a/wiki/principal.wikitext
+++ b/wiki/principal.wikitext
@@ -24,3 +24,5 @@ This is generally not used in the comparative or superlative, as the meaning is 
 *[[headmaster]]
 *[[PITI payment]]
 *[[principle]]
+
+[[et:Principal]]
