See [[Entry layout explained]].  This is one of my favorite words. <mean#1038497>

--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -2,18 +2,31 @@
 === Pronunciation ===
 *[[w:IPA|IPA]]: /miːn/
 
-===Etymology 1===
+=== mean (1) ===
+==== Etymology ====
 Old English ''[[mænan]]'', "to mean", "to allude to". Confer Durch ''[[meenen]]'', German ''[[meinen]]''. Cognate with "[[mind]]" and German ''[[Minne]]'', "love".
-==== Verb ====
+==== Transitive Verb ====
 '''to mean''' ('''meant''', '''meant''')
-# to want to say something
-#:''I don't understand what you '''mean''', I'm afraid.''
-# to [[signify]]
-#:''What does this hieroglyph '''mean'''?''
-# to [[intend]]
-#:''I didn't '''mean''' to hurt you.''
-# to [[stand behind]] what one says
-#:''Does she really '''mean''' what she said to him last night?''
+# To [[convey]], [[signify]], or [[indicate]].
+#* ''What does this hieroglyph '''mean'''?'' 
+#* ''The sky is red this morning&mdash;does that '''mean''' we're in for a storm?''
+# To want or intend to convey.
+#* ''I'm afraid I don't understand what you '''mean'''.''
+#* ''Say what you ''mean'' and mean what you say.''
+# To [[intend]]; to [[plan on]] doing.
+#* ''I didn't '''mean''' to knock your tooth out.''
+#* ''I [[mean]] to go to Baddeck this summer.''
+#* ''I [[meant]] to take the car in for a smog check, but it slipped my mind.''
+# To have [[conviction]] in what one says.
+#* ''Does she really '''mean''' what she said to him last night?''
+#* ''Say what you mean and '''mean''' what you say.''
+# To have intentions of a some kind.
+#* ''Don't be angry; she '''meant''' well.''
+#* ''Someone's coming up.  He '''means''' business.''
+# To [[result in]]; to [[bring about]].
+#* ''One faltering step '''means''' certain death.''
+
+
 
 ===== Translations =====
 *Dutch: [[menen]]
@@ -28,15 +41,24 @@ Old English ''[[mænan]]'', "to mean", "to allude to". Confer Durch ''[[meenen]]
 *Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
 *Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
 
-===Etymology 2===
+=== mean (2) ===
+
+==== Etymology ====
 Old English ''[[gemæne]]''. Confer Dutch ''[[gemeen]]'', German ''[[gemein]]'', Gothic ''[[gamains]]''. Cognate with Latin ''[[communis]]''.
+
 ==== Adjective ====
 '''mean''' ('''meaner''', '''meanest''')
 
-# not [[nice]] at all
-#low in quality; inferior.
-#(''slang''): hard to cope with.
-#:''He hits a mean backhand''.
+# Causing or intending to cause intentional [[harm]]; bearing ill will towards another; [[cruel]]; [[malicious]].
+#* ''Watch out for her, she's [[mean]].  I said good morning to her, and she punched me in the nose.''
+# [[Selfish]]; acting without consideration of others; [[unkind]].
+#* ''It was [[mean]] to steal the girl's piggy bank, but he just ''had'' to get uptown and he had no cash of his own.''
+# Powerful; fierce; harsh; damaging.
+#* ''It must have been a [[mean]] typhoon that levelled this town.''
+# Accomplished with great skill; deft; hard to compete with.
+#* ''Your mother can roll a [[mean]] cigarette.''
+#* ''He hits a [[mean]] backhand''.
+# Low in quality; inferior.
 
 ===== Translations =====
 *Chinese: [[卑鄙]]
@@ -59,11 +81,14 @@ Old English ''[[gemæne]]''. Confer Dutch ''[[gemeen]]'', German ''[[gemein]]'',
 *[[meanness]]
 *[[meany]]
 
-===Etymology 3===
+=== mean (3) ===
+==== Etymology ====
 Old French ''[[meien]]'' (French ''[[moyen]]''), Late Latin ''[[medianus]]'', from ''[[medius]]''. Cognate with "mid"
+
 ====Adjective====
 '''mean'''
-#having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
+# Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
+
 =====Translations=====
 *Esperanto: [[meza]]
 *Finnish: [[keski-]]
@@ -74,7 +99,7 @@ Old French ''[[meien]]'' (French ''[[moyen]]''), Late Latin ''[[medianus]]'', fr
 
 ==== Noun ====
 '''mean''' (''plural:'' '''means''')
-#(''statistics'') an [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
+#(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
 #See the noun ''[[means]]''
 
 ===== Translations =====
@@ -88,7 +113,7 @@ Old French ''[[meien]]'' (French ''[[moyen]]''), Late Latin ''[[medianus]]'', fr
 *Japanese: [[平均]]  ([[へいきん]], heikin) (1), [[平均値]]  ([[へいきんち]], heikinchi) (1)
 *Portuguese: [[média]] ''f'' (1)
 
-====See also====
+==== See also ====
 *[[average]]
 *[[means]]
 *[[median]]
