--- a/wiki/procreation.wikitext
+++ b/wiki/procreation.wikitext
@@ -3,7 +3,20 @@
 '''procreation'''
 # the [[process]] by which an [[organism]] [[produces]] [[others]] of its [[kind]]
 # the [[sexual]] [[activity]] of [[conceiving]] and [[bearing]] [[offspring]]
-===Derived terms===
+
+====Translations====
+*[[Chinese]]: [[生育]] (shengyu)
+*[[French]]: [[procréation]]
+*[[German]]: [[Zeugung]]
+*[[Greek]]: [[προκατασκευή]] (prokatskeué)
+*[[Italian]]: [[procreazione)
+*[[Japanese]]: [[出産]] (しゅっさん shussan)
+*[[Korean]]: [[출산]]
+*[[Latin]]: [[procreatio]] ''nominative'', procreationis ''genitive''
+*[[Russian]]: [[самозарождение]] (samozarozhdeniye)
+*[[Spanish]]: [[procreación]]
+
+====Derived terms====
 *[[procreate]]
 *[[procreating]]
 *[[procreative]]
