--- a/wiki/procreation.wikitext
+++ b/wiki/procreation.wikitext
@@ -9,7 +9,7 @@
 *[[French]]: [[procréation]]
 *[[German]]: [[Zeugung]]
 *[[Greek]]: [[προκατασκευή]] (prokatskeué)
-*[[Italian]]: [[procreazione)
+*[[Italian]]: [[procreazione]]
 *[[Japanese]]: [[出産]] (しゅっさん shussan)
 *[[Korean]]: [[출산]]
 *[[Latin]]: [[procreatio]] ''nominative'', procreationis ''genitive''
