robot  Adding:fi <prisoner#74723>

--- a/wiki/prisoner.wikitext
+++ b/wiki/prisoner.wikitext
@@ -3,3 +3,5 @@
 {{wikipedia}}
 '''prisoner'''
 # A person [[incarcerate]]d in a [[prison]], while on [[trial]] or serving a [[sentence]].
+
+[[fi:Prisoner]]
