robot  Adding:fi,et <prison#55571>

--- a/wiki/prison.wikitext
+++ b/wiki/prison.wikitext
@@ -74,5 +74,8 @@
 
 #prison (''place, confinement'')
 
-[[fr:prison]]
 [[Category:1000 English basic words]]
+
+[[et:Prison]]
+[[fr:prison]]
+[[fi:Prison]]
