--- a/wiki/Laplace.wikitext
+++ b/wiki/Laplace.wikitext
@@ -1,2 +1,3 @@
 French mathematician of the 18th century, had an impact in celestial mechanics, and the mathematizing of other phenonmena.
 {{cleanup}}
+{{rfd}}
