--- a/wiki/Plotinus.wikitext
+++ b/wiki/Plotinus.wikitext
@@ -1,2 +1,2 @@
 3rd century Christian mystic, sometimes called a Neo-Platonist.  Forumlator of the three Hypostasi; The One, The Mind, The Soul.
-{{cleanup}}
+{{cleanup}}{{rfd}}
