--- a/wiki/solon.wikitext
+++ b/wiki/solon.wikitext
@@ -1,1 +1,2 @@
 {{cleanup}}6th b.c. Athenian lawgiver.  Known for his remark to the Great King, Croesus, "Judge no man happy until he is dead."
+{{rfd}}
