--- a/wiki/Eleusinian.wikitext
+++ b/wiki/Eleusinian.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Adjective===
 '''Eleusinian'''
-# of, or relating to [[Eleusis]], or it [[mysteries]]
+# of, or relating to [[Eleusis]], or it [[mysteries]]{{rfd}}
