--- a/wiki/procedure.wikitext
+++ b/wiki/procedure.wikitext
@@ -87,3 +87,5 @@ The translations below need to be checked by native speakers and inserted into t
 '''procedure'''
 
 #procedure
+
+[[nl:procedure]]
