--- a/wiki/home.wikitext
+++ b/wiki/home.wikitext
@@ -37,6 +37,7 @@
 *Punjabi: [[ਘਰ]]
 *Spanish: [[hogar]]
 *Swedish: [[hem]]
+*Danish:  [[hjem]]
 *Turkish: [[ev]], [[yurt]]
 *Italian: [[casa]] 
 *{{cy}}: [[tref]] ''f''
