robot  Adding:pl,de <proliferation#99545>

--- a/wiki/proliferation.wikitext
+++ b/wiki/proliferation.wikitext
@@ -6,3 +6,6 @@
 # the result of [[building]] up; [[buildup]], [[accretion]]
 # the [[spread]] of [[biochemical]], [[nuclear]] and other [[weapons of mass destruction]] to [[countries]] not [[originally]] [[involved]] in [[developing]] them
 [[category:English nouns]]
+
+[[de:Proliferation]]
+[[pl:Proliferation]]
