--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -1,11 +1,22 @@
 ==English==
-=== Pronunciation ===
-*[[w:IPA|IPA]]: /miːn/
+=== Etymology ===
+''' transitive verb'''
+:From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
 
-=== mean (1) ===
-==== Etymology ====
-Old English ''[[mænan]]'', "to mean", "to allude to". Confer Durch ''[[meenen]]'', German ''[[meinen]]''. Cognate with "[[mind]]" and German ''[[Minne]]'', "love".
-==== Transitive Verb ====
+'''adjective (1)'''
+:From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
+
+'''adjective (2)'''
+:From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
+
+'''noun''' 
+:''?''
+
+=== Pronunciation ===
+*{{IPAlink}} {{IPA|/miːn/}}
+*{{AHD|/mēn/}}
+
+=== Transitive verb ===
 '''to mean''' ('''meant''', '''meant''')
 # To [[convey]], [[signify]], or [[indicate]].
 #* ''What does this hieroglyph '''mean'''?'' 
@@ -26,27 +37,7 @@ Old English ''[[mænan]]'', "to mean", "to allude to". Confer Durch ''[[meenen]]
 # To [[result in]]; to [[bring about]].
 #* ''One faltering step '''means''' certain death.''
 
-
-
-===== Translations =====
-*Dutch: [[menen]]
-*[[Esperanto]]: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
-*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
-*French: [[vouloir dire]] (1); [[signifier]] (2)
-*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
-*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
-*[[Ido]]: [[signifikar]]
-*[[Interlingua]]: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
-*Italian: [[voler dire]] (1); [[significare]] (2)
-*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
-*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
-
-=== mean (2) ===
-
-==== Etymology ====
-Old English ''[[gemæne]]''. Confer Dutch ''[[gemeen]]'', German ''[[gemein]]'', Gothic ''[[gamains]]''. Cognate with Latin ''[[communis]]''.
-
-==== Adjective ====
+=== Adjective (1) ===
 '''mean''' ('''meaner''', '''meanest''')
 
 # Causing or intending to cause intentional [[harm]]; bearing ill will towards another; [[cruel]]; [[malicious]].
@@ -60,64 +51,86 @@ Old English ''[[gemæne]]''. Confer Dutch ''[[gemeen]]'', German ''[[gemein]]'',
 #* ''He hits a [[mean]] backhand''.
 # Low in quality; inferior.
 
-===== Translations =====
-*Chinese: [[卑鄙]]
-*Dutch: [[gemeen]] (1,2), [[boosaardig]] (1), [[gemiddelde]] (2)
-*[[Esperanto]]: [[kruela]] (1), [[malafabla]] (1), [[malbonkvalita]] (2)
-*Finnish: [[ilkeä]] (1)
-*French: [[inférieur]] (2)
-*German: [[gemein]] (1); [[mittelmäßig]] (2), [[böse]] (1,3)
-*Greek: [[μέσος]] ''m'', [[μέση]] ''f'', [[μέσο]] ''n''
-*Indonesian: [[buruk hati]], [[kikir]], [[marah|pemarah]], [[rata-rata]]
-*[[Interlingua]]: [[mal]], [[perverse]], [[contemptibile]] (1); [[inferior]] (2); [[insuperabile]], [[superior]] (3)
-*Italian: [[inferiore]] (2)
-*Japanese: [[意地悪]] ([[いじわる]], ijiwaru) (1), [[悪い]] ([[わるい]], warui), [[平均]] ([[へいきん]], heikin), [[平均的]] ([[へいきんてき]], heikinteki)
-*Portuguese: [[mal]] ''m'' & ''f'', [[perverso]] ''m'', [[perversa]] ''f'' (1); [[inferior]] ''m'' & ''f'' (2); [[médio]] ''m'', [[média]] ''f'' (3); [[insuperável]] ''m'' & ''f'', [[superior]] ''m'' & ''f''
-*Russian: [[средний]] ''m'', [[средняя]] ''f'', [[среднее]] ''n''
-*Spanish: [[malo]] ''m'', [[mala]] ''f''
-
 ====Related terms====
 *[[meanie]]
 *[[meanness]]
 *[[meany]]
 
-=== mean (3) ===
-==== Etymology ====
-Old French ''[[meien]]'' (French ''[[moyen]]''), Late Latin ''[[medianus]]'', from ''[[medius]]''. Cognate with "mid"
-
-====Adjective====
+=== Adjective (2) ===
 '''mean'''
 # Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
 
-=====Translations=====
-*Esperanto: [[meza]]
-*Finnish: [[keski-]]
-*French: [[moyen]]
-*German: [[Mittel-]]
-*[[Interlingua]]: [[medie]]
-*Italian: [[medio]]
-
-==== Noun ====
+=== Noun ===
 '''mean''' (''plural:'' '''means''')
 #(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
 #See the noun ''[[means]]''
-
-===== Translations =====
-*Dutch: [[gemiddelde]] (1)
-*Finnish: [[keskiarvo]] (1)
-*French: [[moyenne]] ''f'' (1)
-*German: [[Mittel]] ''n'' (1)
-*Indonesian: [[rata-rata]] (1)
-*[[Interlingua]]: [[media]] (1)
-*Italian: [[media]] ''f'' (1)
-*Japanese: [[平均]]  ([[へいきん]], heikin) (1), [[平均値]]  ([[へいきんち]], heikinchi) (1)
-*Portuguese: [[média]] ''f'' (1)
 
 ==== See also ====
 *[[average]]
 *[[means]]
 *[[median]]
 *[[mode]]
+
+=== Translations ===
+'''transitive verb'''
+{{top}}
+*Dutch: [[menen]]
+*Esperanto: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
+*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
+*French: [[vouloir dire]] (1); [[signifier]] (2)
+*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
+*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
+*Ido: [[signifikar]]
+*Interlingua: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
+{{mid}}
+*Italian: [[voler dire]] (1); [[significare]] (2)
+*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
+*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
+{{bottom}}
+
+'''adjective (1)'''
+{{top}}
+*Chinese: [[卑鄙]]
+*Dutch: [[gemeen]] (1,2), [[boosaardig]] (1), [[gemiddelde]] (2)
+*Esperanto: [[kruela]] (1), [[malafabla]] (1), [[malbonkvalita]] (2)
+*Finnish: [[ilkeä]] (1)
+*French: [[inférieur]] (2)
+*German: [[gemein]] (1); [[mittelmäßig]] (2), [[böse]] (1,3)
+*Greek: [[μέσος]] ''m'', [[μέση]] ''f'', [[μέσο]] ''n''
+*Indonesian: [[buruk hati]], [[kikir]], [[marah|pemarah]], [[rata-rata]]
+*Interlingua: [[mal]], [[perverse]], [[contemptibile]] (1); [[inferior]] (2); [[insuperabile]], [[superior]] (3)
+*Italian: [[inferiore]] (2)
+{{mid}}
+*Japanese: [[意地悪]] ([[いじわる]], ijiwaru) (1), [[悪い]] ([[わるい]], warui), [[平均]] ([[へいきん]], heikin), [[平均的]] ([[へいきんてき]], heikinteki)
+*Portuguese: [[mal]] ''m'' & ''f'', [[perverso]] ''m'', [[perversa]] ''f'' (1); [[inferior]] ''m'' & ''f'' (2); [[médio]] ''m'', [[média]] ''f'' (3); [[insuperável]] ''m'' & ''f'', [[superior]] ''m'' & ''f''
+*Russian: [[средний]] ''m'', [[средняя]] ''f'', [[среднее]] ''n''
+*Spanish: [[malo]] ''m'', [[mala]] ''f''
+{{bottom}}
+
+'''adjective (2)'''
+{{top}}
+*Esperanto: [[meza]]
+*Finnish: [[keski-]]
+*French: [[moyen]]
+*German: [[Mittel-]]
+{{mid}}
+*Interlingua: [[medie]]
+*Italian: [[medio]]
+{{bottom}}
+
+'''noun'''
+{{top}}
+*Dutch: [[gemiddelde]] (1)
+*Finnish: [[keskiarvo]] (1)
+*French: [[moyenne]] ''f'' (1)
+*German: [[Mittel]] ''n'' (1)
+*Indonesian: [[rata-rata]] (1)
+*Interlingua: [[media]] (1)
+*Italian: [[media]] ''f'' (1)
+{{mid}}
+*Japanese: [[平均]]  ([[へいきん]], heikin) (1), [[平均値]]  ([[へいきんち]], heikinchi) (1)
+*Portuguese: [[média]] ''f'' (1)
+{{bottom}}
 
 
 [[Category:English words with multiple etymologies]]
