a proper entry <Laplace#99329>

--- a/wiki/Laplace.wikitext
+++ b/wiki/Laplace.wikitext
@@ -1,3 +1,9 @@
-French mathematician of the 18th century, had an impact in celestial mechanics, and the mathematizing of other phenonmena.
-{{cleanup}}
-{{rfd}}
+==English==
+===Proper noun===
+{{wikipediapar|Pierre-Simon Laplace}}
+'''Laplace'''
+#{{mathematics}} '''Piere-Simon Laplace''', [[French]] [[mathematician]] 1749-1827
+===Derived terms===
+*[[Laplace distribution]]
+*[[Laplace plane]]
+*[[Laplace transform]]
