--- a/wiki/cabaret.wikitext
+++ b/wiki/cabaret.wikitext
@@ -7,3 +7,7 @@ Old French, 'wooden structure, inn'.
 '''cabaret'''
 # Live entertainment held in a resturant or nightclub.
 # The nightclub or resturant where such entertainment is held.
+
+[[et:Cabaret]]
+[[it:cabaret]]
+[[pl:Cabaret]]
