Please see [[Wiktionary:Entry_layout_explained#Homographs]] on how multiple etymologies are handled. <mean#1038497>

--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -1,22 +1,14 @@
 ==English==
-=== Etymology ===
-''' transitive verb'''
-:From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
-
-'''adjective (1)'''
-:From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
-
-'''adjective (2)'''
-:From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
-
-'''noun''' 
-:''?''
-
 === Pronunciation ===
 *{{IPAlink}} {{IPA|/miːn/}}
 *{{AHD|/mēn/}}
 
-=== Transitive verb ===
+=== mean (1) ===
+==== Etymology ====
+''' transitive verb'''
+:From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
+
+==== Transitive verb ====
 '''to mean''' ('''meant''', '''meant''')
 # To [[convey]], [[signify]], or [[indicate]].
 #* ''What does this hieroglyph '''mean'''?'' 
@@ -37,7 +29,12 @@
 # To [[result in]]; to [[bring about]].
 #* ''One faltering step '''means''' certain death.''
 
-=== Adjective (1) ===
+
+=== mean (2) ===
+==== Etymology ====
+:From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
+
+==== Adjective ====
 '''mean''' ('''meaner''', '''meanest''')
 
 # Causing or intending to cause intentional [[harm]]; bearing ill will towards another; [[cruel]]; [[malicious]].
@@ -56,11 +53,15 @@
 *[[meanness]]
 *[[meany]]
 
-=== Adjective (2) ===
+=== mean (3) ===
+==== Etymology ====
+:From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
+
+==== Adjective ====
 '''mean'''
 # Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
 
-=== Noun ===
+==== Noun ====
 '''mean''' (''plural:'' '''means''')
 #(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
 #See the noun ''[[means]]''
@@ -71,7 +72,7 @@
 *[[median]]
 *[[mode]]
 
-=== Translations ===
+==== Translations ====
 '''transitive verb'''
 {{top}}
 *Dutch: [[menen]]
