--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -29,6 +29,23 @@
 # To [[result in]]; to [[bring about]].
 #* ''One faltering step '''means''' certain death.''
 
+==== Translations ====
+{{top}}
+*Dutch: [[menen]]
+*Esperanto: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
+*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
+*French: [[vouloir dire]] (1); [[signifier]] (2)
+*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
+*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
+*Ido: [[signifikar]]
+*Interlingua: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
+{{mid}}
+*Italian: [[voler dire]] (1); [[significare]] (2)
+*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
+*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
+{{bottom}}
+
+
 
 === mean (2) ===
 ==== Etymology ====
@@ -53,6 +70,25 @@
 *[[meanness]]
 *[[meany]]
 
+==== Translations ====
+{{top}}
+*Chinese: [[卑鄙]]
+*Dutch: [[gemeen]] (1,2), [[boosaardig]] (1), [[gemiddelde]] (2)
+*Esperanto: [[kruela]] (1), [[malafabla]] (1), [[malbonkvalita]] (2)
+*Finnish: [[ilkeä]] (1)
+*French: [[inférieur]] (2)
+*German: [[gemein]] (1); [[mittelmäßig]] (2), [[böse]] (1,3)
+*Greek: [[μέσος]] ''m'', [[μέση]] ''f'', [[μέσο]] ''n''
+*Indonesian: [[buruk hati]], [[kikir]], [[marah|pemarah]], [[rata-rata]]
+*Interlingua: [[mal]], [[perverse]], [[contemptibile]] (1); [[inferior]] (2); [[insuperabile]], [[superior]] (3)
+*Italian: [[inferiore]] (2)
+{{mid}}
+*Japanese: [[意地悪]] ([[いじわる]], ijiwaru) (1), [[悪い]] ([[わるい]], warui), [[平均]] ([[へいきん]], heikin), [[平均的]] ([[へいきんてき]], heikinteki)
+*Portuguese: [[mal]] ''m'' & ''f'', [[perverso]] ''m'', [[perversa]] ''f'' (1); [[inferior]] ''m'' & ''f'' (2); [[médio]] ''m'', [[média]] ''f'' (3); [[insuperável]] ''m'' & ''f'', [[superior]] ''m'' & ''f''
+*Russian: [[средний]] ''m'', [[средняя]] ''f'', [[среднее]] ''n''
+*Spanish: [[malo]] ''m'', [[mala]] ''f''
+{{bottom}}
+
 === mean (3) ===
 ==== Etymology ====
 :From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
@@ -73,42 +109,7 @@
 *[[mode]]
 
 ==== Translations ====
-'''transitive verb'''
-{{top}}
-*Dutch: [[menen]]
-*Esperanto: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
-*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
-*French: [[vouloir dire]] (1); [[signifier]] (2)
-*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
-*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
-*Ido: [[signifikar]]
-*Interlingua: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
-{{mid}}
-*Italian: [[voler dire]] (1); [[significare]] (2)
-*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
-*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
-{{bottom}}
-
-'''adjective (1)'''
-{{top}}
-*Chinese: [[卑鄙]]
-*Dutch: [[gemeen]] (1,2), [[boosaardig]] (1), [[gemiddelde]] (2)
-*Esperanto: [[kruela]] (1), [[malafabla]] (1), [[malbonkvalita]] (2)
-*Finnish: [[ilkeä]] (1)
-*French: [[inférieur]] (2)
-*German: [[gemein]] (1); [[mittelmäßig]] (2), [[böse]] (1,3)
-*Greek: [[μέσος]] ''m'', [[μέση]] ''f'', [[μέσο]] ''n''
-*Indonesian: [[buruk hati]], [[kikir]], [[marah|pemarah]], [[rata-rata]]
-*Interlingua: [[mal]], [[perverse]], [[contemptibile]] (1); [[inferior]] (2); [[insuperabile]], [[superior]] (3)
-*Italian: [[inferiore]] (2)
-{{mid}}
-*Japanese: [[意地悪]] ([[いじわる]], ijiwaru) (1), [[悪い]] ([[わるい]], warui), [[平均]] ([[へいきん]], heikin), [[平均的]] ([[へいきんてき]], heikinteki)
-*Portuguese: [[mal]] ''m'' & ''f'', [[perverso]] ''m'', [[perversa]] ''f'' (1); [[inferior]] ''m'' & ''f'' (2); [[médio]] ''m'', [[média]] ''f'' (3); [[insuperável]] ''m'' & ''f'', [[superior]] ''m'' & ''f''
-*Russian: [[средний]] ''m'', [[средняя]] ''f'', [[среднее]] ''n''
-*Spanish: [[malo]] ''m'', [[mala]] ''f''
-{{bottom}}
-
-'''adjective (2)'''
+'''adjective'''
 {{top}}
 *Esperanto: [[meza]]
 *Finnish: [[keski-]]
@@ -132,7 +133,6 @@
 *Japanese: [[平均]]  ([[へいきん]], heikin) (1), [[平均値]]  ([[へいきんち]], heikinchi) (1)
 *Portuguese: [[média]] ''f'' (1)
 {{bottom}}
-
 
 [[Category:English words with multiple etymologies]]
 
