--- a/wiki/provincial.wikitext
+++ b/wiki/provincial.wikitext
@@ -17,3 +17,7 @@
 # A person belonging to a [[province]]; one who is provincial.
 # ''(Roman Catholic Church):'' A monastic superior, who, under the general of his order, has the direction of all the religious houses of the same fraternity in a given district, called a province of the order.
 # A country bumpkin.
+
+[[et:Provincial]]
+[[fr:provincial]]
+[[pl:Provincial]]
