robot  Adding:sv <précis#61256>

--- a/wiki/pr%C3%A9cis.wikitext
+++ b/wiki/pr%C3%A9cis.wikitext
@@ -24,3 +24,5 @@ French, substantive use of the adjective ''[[précis#French|précis]]'', "precis
 *[[précisément]]
 *[[préciser]]
 *[[précision]]
+
+[[sv:précis]]
