sv <probability distribution#99569>

--- a/wiki/probability_distribution.wikitext
+++ b/wiki/probability_distribution.wikitext
@@ -8,3 +8,5 @@
 *[[Poisson distribution]]
 *[[polar distribution]]
 *[[probability density]]
+====Translations====
+*Swedish: [[sannolikhetsfördelning]] ''c''
