--- a/wiki/puissant.wikitext
+++ b/wiki/puissant.wikitext
@@ -15,3 +15,5 @@ From {{L.}} [[posse]], be able < "[[potis]]", [[able]]
 # [[powerful]], [[mighty]]
 ====Related terms====
 [[puissance]]
+
+[[et:Puissant]]
