robot  Adding:pl,hu,it <campo#91705>

--- a/wiki/campo.wikitext
+++ b/wiki/campo.wikitext
@@ -16,3 +16,7 @@ From Latin [[campus]]
 ===Related words===
 *[[Ciudad]] - [[City]]
 *[[Mar]] - [[Seaside|Sea(side)]]
+
+[[it:campo]]
+[[hu:Campo]]
+[[pl:Campo]]
