robot  Adding:fr <camouflage#64480>

--- a/wiki/camouflage.wikitext
+++ b/wiki/camouflage.wikitext
@@ -11,4 +11,5 @@
 '''to camouflage''' (camouflages, camouflaged, camouflaging)
 # to [[hide]] or [[disguise]] something  by [[cover up|cover]]ing it up or changing the way it looks
 
+[[fr:camouflage]]
 [[pl:Camouflage]]
