--- a/wiki/t%C3%A1.wikitext
+++ b/wiki/t%C3%A1.wikitext
@@ -8,7 +8,7 @@
 *'''tá [[tú]]''' - [[you]] ([[singular|sg.]]) [[are]]
 *'''tá [[sé]]''' - [[he]] [[is]]
 *'''tá [[sí#Irish|sí]]''' - [[she]] [[is]]
-*'''tá [[muid]]''' or '''[[táimid]]'' - [[we]] [[are]]
+*'''tá [[muid]]''' or '''[[táimid]]''' - [[we]] [[are]]
 *'''tá [[sibh]]''' - [[you]] ([[plural|pl.]]) [[are]]
 *'''tá [[siad]]''' - [[they]] [[are]]
 
