--- a/wiki/solon.wikitext
+++ b/wiki/solon.wikitext
@@ -1,2 +1,7 @@
-{{cleanup}}6th b.c. Athenian lawgiver.  Known for his remark to the Great King, Croesus, "Judge no man happy until he is dead."
-{{rfd}}
+==English==
+===Etymology===
+from [[w:Solon|Solon]], the Athenian statesman
+===Noun===
+'''solon'''
+# a man who is a [[respected]] [[legislator]] in [[national]] or [[international]] [[affair]]s
+[[category:English nouns]]
