robot  Adding:nl <purulent#80749>

--- a/wiki/purulent.wikitext
+++ b/wiki/purulent.wikitext
@@ -7,3 +7,5 @@
 ===Adjective===
 '''purulent'''
 # {{cattag|medical}}: Consisting of pus, or matter; partaking of the nature of pus; attended with suppuration; as, purulent inflammation.
+
+[[nl:purulent]]
