robot  Adding:de,pt <cantar#39732>

--- a/wiki/cantar.wikitext
+++ b/wiki/cantar.wikitext
@@ -38,9 +38,11 @@
 [[Present]] and [[imperative]] [[autonomous]] of [[can#Irish|can]] "to [[sing]]"
 
 [[ca:Cantar]]
+[[de:cantar]]
 [[es:cantar]]
 [[fr:cantar]]
 [[gl:Cantar]]
 [[hu:Cantar]]
 [[nl:cantar]]
 [[pl:Cantar]]
+[[pt:Cantar]]
