--- a/wiki/spank.wikitext
+++ b/wiki/spank.wikitext
@@ -10,8 +10,9 @@ Probably [[onomatopoeic]].
 '''spank'''
 
 # To punish a person (traditionally a child or wife) by smacking their buttocks with the bare hand, while they lie across the spanker's lap.
-#: ''My father used to spank me when I was a bad girl.''
+#: ''My father used to spank me when I was a bad girl.''     
 # By extension, any similar striking (e.g. for arousal rather than punishment, the thighs rather than the buttocks, with an object rather than the hand, or not over the lap).
+#: ''Dave likes to spank his girlfriend's bare bottom with a belt.''
 # To move along at a brisk speed.
 #: ''The ship was really spanking along.''
 # In the expression "spanking new", very new, brand new.
