robot  Adding:fr <canyon#37965>

--- a/wiki/canyon.wikitext
+++ b/wiki/canyon.wikitext
@@ -27,5 +27,6 @@ From {{Sp.}} [[cañón]]
 *Indonesian: [[ngarai]]
 *Spanish: [[cañón]] ''m'', [[barranca]] ''f''
 
+[[fr:canyon]]
 [[it:canyon]]
 [[pl:Canyon]]
