--- a/wiki/capital.wikitext
+++ b/wiki/capital.wikitext
@@ -210,3 +210,4 @@ The translations below need to be checked by native speakers and inserted into t
 [[it:capital]]
 [[hu:capital]]
 [[pl:Capital]]
+[[fi:Capital]]
