--- a/wiki/leap.wikitext
+++ b/wiki/leap.wikitext
@@ -56,6 +56,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--right column-->
+*Irish: [[léim]]
 *Italian: [[saltare]]
 *Japanese: [[飛躍]]する ([[ひやく]]する, hiyaku-suru)
 *Norwegian: [[sprang]], [[hopp]], [[hoppe]]
