--- a/wiki/joke.wikitext
+++ b/wiki/joke.wikitext
@@ -16,6 +16,7 @@ from Latin [[iocus]].
 *Dutch: [[grap]] ''f''
 *French: (1): [[plaisanterie]] ''f'', [[blague]] ''f''; (2): [[calembour]] ''m'', [[jeu de mots]] ''m'' (3): plaisanterie, blague
 *Portuguese (1): [[piada]] ''f''
+*Swedish: [[skämt]] ''n'' (1), [[rolig historia]] ''c'' (1), [[vits]] ''c'' (1), [[ordvits]] ''c'' (2)
 
 ===Intransitive verb===
 '''to joke''' (''[[present participle]]'' '''joking''', ''[[past tense]] and [[past participle]]'' '''joked''')
@@ -26,6 +27,7 @@ from Latin [[iocus]].
 ====Translations====
 *Dutch: [[grappen]], [[grappenmaken]]
 *French: [[plaisanter]], [[blaguer]]
+*Swedish: [[skämta]], [[skoja]]
 
 ====Related terms====
 *[[joker]]
