/* Derived terms */ <Laplace#99329>

--- a/wiki/Laplace.wikitext
+++ b/wiki/Laplace.wikitext
@@ -5,6 +5,7 @@
 #{{mathematics}} '''Piere-Simon Laplace''', [[French]] [[mathematician]] 1749-1827
 ===Derived terms===
 *[[Laplace distribution]]
+*[[Laplace operator]]
 *[[Laplace plane]]
 *[[Laplace transform]]
 *[[Laplacian]]
